set a fixed value for PageHeaderWrapper to ensure the UI elements in the header do not move when moving between pages (without it the back btn position would shift slightly when going from the node page to edit/add feed page)

--- a/src/popup/components/page-header/PageHeaderWrapper.module.css
+++ b/src/popup/components/page-header/PageHeaderWrapper.module.css
@@ -13,6 +13,7 @@
   align-items: center;
   gap: var(--size-2);
   padding-block: var(--size-2);
+  block-size: 54px;
 
   @container page-header scroll-state(stuck: top) {
     --shadow-color: rgb(0 0 0 / 50%);
